--- a/frontend/src/app/features/auth/login/login.html
+++ b/frontend/src/app/features/auth/login/login.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+<div class="login-container">
+  <mat-card class="login-card">
+    <h2>Login</h2>
+
+    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+      
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" type="email" />
+        <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
+          Email is required
+        </mat-error>
+        <mat-error *ngIf="loginForm.get('email')?.hasError('email')">
+          Enter a valid email
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="full-width">
+        <mat-label>Password</mat-label>
+        <input matInput formControlName="password" type="password" />
+        <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
+          Password is required
+        </mat-error>
+      </mat-form-field>
+
+      <button mat-raised-button color="primary" class="full-width" type="submit">
+        Login
+      </button>
+    </form>
+
+    <p class="register-link">
+      Don’t have an account?
+      <a routerLink="/register">Register</a>
+    </p>
+  </mat-card>
+</div>
